QPID-7786: qpidd segfaults during startup when SSL certificate cant be read

Check if currentAddrInfo != null before referencing it.

If it is null, whole attempt to listen on SSL port fails - expected outcome.

Signed-off-by: Pavel Moravec <pmoravec@redhat.com>